--- a/NomadCoder/#3 JS APP/index.css
+++ b/NomadCoder/#3 JS APP/index.css
@@ -1,7 +1,18 @@
-body{
-    color: #34495e;
+body {
+    background-color: #2c3e50;
 }
 
+.btn {
+    cursor: pointer;
+}
+
+body{
+    color: #ffffff;
+}
+
+.clicked {
+    color: #7f8c8d;
+}
 
 .form,
 .greetings {
@@ -10,4 +21,23 @@ body{
 
 .showing {
     display: block;
+}
+
+@keyframes fadeIn{
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.bgImage{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 0.5s linear;
 }
