--- a/Elysium/css/style.css
+++ b/Elysium/css/style.css
@@ -1,2 +1,2 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
-@import "main.css"; /* 기본 배경 지정 */
+@import "main.css";
+/* 기본 배경 지정 */
