--- a/Elysium/css/basic.css
+++ b/Elysium/css/basic.css
@@ -1,3 +1,9 @@
+/*웹 기본 폰트 설정*/
+@font-face{
+    font-family :'Roboto';
+    src : url('./fonts/Roboto/Roboto-Light.ttf') format('truetype');
+}
+
 /*html 파일 전체에 적용되는 기본 배경 설정*/
 html {
     position: absolute;
