--- a/Elysium/css/sympton1/sympton1-2.css
+++ b/Elysium/css/sympton1/sympton1-2.css
@@ -10,6 +10,12 @@
 	background-color: rgba(157, 28, 32, 0.75);
 }
 
+label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* 크기가 큰 버튼의 기본 설정 */
 .checkbox-container .btn1 {
     position: absolute;
@@ -27,7 +33,6 @@
     font-weight: 700;
     line-height: 19px;
     letter-spacing: 0em;
-    text-align: center;
 }
 
 /* label 고혈압 위치 설정 */
@@ -59,3 +64,4 @@ input[id="surgery_history"] + label {
 input[id="medication"] + label {
     top: 508px;
 }
+
