--- a/Elysium/css/sympton2/sympton2-4.css
+++ b/Elysium/css/sympton2/sympton2-4.css
@@ -8,6 +8,12 @@
 	background-color: rgba(157, 28, 32, 0.75);
 }
 
+label{
+    display: flex; /* 라벨 내 text 중앙 정렬을 위해 flex box로 설정을 바꿈 */
+    align-items: center;
+    justify-content: center;
+}
+
 /* 신체 관련 버튼 기본 설정*/
 .small-btn {
     position: absolute;
@@ -24,5 +30,4 @@
     font-weight: 700;
     line-height: 18px;
     letter-spacing: 0em;
-    text-align: center;
 }
