--- a/Elysium/css/main.css
+++ b/Elysium/css/main.css
@@ -18,11 +18,11 @@ img {
   background-color: #ffffff;
 }
 
-#patientName {
+#join_patientName {
   margin-top: 380px;
 }
 
-#patientPhone {
+#join_patientPhone {
   margin-top: 10px;
 }
 
