--- a/Elysium/css/registration.css
+++ b/Elysium/css/registration.css
@@ -26,7 +26,7 @@ img {
     top: 327px;
 }
 
-#join_clinicAddress {
+#join_addressSearch {
     height: 48px;
     width: 398px;
     margin-left: 399px;
@@ -70,10 +70,10 @@ img {
     color: white;
 }
 
-#join_identificationNumber {
+#join_juminNumber {
     top: 443px;
 }
 
-#join_recommender {
+#join_recommendPatient {
     top: 501px;
 }
